--- a/misc/nginx/dev.conf
+++ b/misc/nginx/dev.conf
@@ -12,9 +12,8 @@ server {
 
 	root /www/tank/client/dist;
 
-	location /endpoint {
-		add_header "Access-Control-Allow-Origin" "*";
-		proxy_pass http://127.0.0.1:21023;
+	location /data {
+		alias /www/tank/output;
 	}
 
 	location /sockjs-node/ {
