--- a/misc/nginx/prod.conf
+++ b/misc/nginx/prod.conf
@@ -14,6 +14,10 @@ server {
 
 	root /www/tank/public;
 
+	location /data {
+		alias /www/tank/output;
+	}
+
 	location / {
 		try_files $uri $uri/ /index.html;
 		index index.html;
