--- a/misc/nginx/prod.conf
+++ b/misc/nginx/prod.conf
@@ -14,6 +14,8 @@ server {
 
 	root /www/tank/public;
 
+	rewrite /apple-touch-icon(-.+)-precomposed.png /apple-touch-icon-precomposed.png break;
+
 	location /data {
 		alias /www/tank/output;
 	}
@@ -28,6 +30,11 @@ server {
 		root /www/tank/public/assets;
 	}
 	location = /favicon.ico {
+		expires max;
+		access_log off; log_not_found off;
+		root /www/tank/public/assets;
+	}
+	location = /apple-touch-icon-precomposed.png {
 		expires max;
 		access_log off; log_not_found off;
 		root /www/tank/public/assets;
