--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
+    "@types/d3": "^6.7.0",
     "bootstrap": "^5.0.1",
+    "d3": "^7.0.0",
     "protobufjs": "^6.11.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
