--- a/misc/nginx/prod.conf
+++ b/misc/nginx/prod.conf
@@ -49,6 +49,23 @@ server {
 
 server {
 
+	server_name wot.9farm.com;
+
+	listen [::]:443 ssl http2;
+	listen [::]:80;
+
+	ssl_certificate	 ssl.d/9farm.com.crt;
+	ssl_certificate_key ssl.d/9farm.com.key;
+
+	error_log off;
+
+	location / {
+		return 301 https://tank.9farm.com/;
+	}
+}
+
+server {
+
 	server_name tank.9farm.com;
 
 	listen [::]:80;
