--- a/misc/docker/Dockerfile
+++ b/misc/docker/Dockerfile
@@ -4,8 +4,8 @@ FROM golang:latest as builder
 
 ARG DOCKER_RUNNING=yes
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt update && apt install -yq protobuf-compiler 
-RUN go get google.golang.org/protobuf/cmd/protoc-gen-go
+RUN apt update && apt install -yq protobuf-compiler tzdata ca-certificates
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1
 
 COPY . /project
 
@@ -19,9 +19,8 @@ FROM alpine
 
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /usr/share/zoneinfo/Asia/Shanghai /usr/share/zoneinfo/Asia/
+COPY --from=builder /project/server/dist/prod/tank-server-next /tank-server
 
 RUN apk add --no-cache gzip brotli
-
-COPY --from=builder /project/server/dist/prod/tank-server-next /tank-server
 
 CMD ["/tank-server"]
