--- a/misc/nginx/prod.conf
+++ b/misc/nginx/prod.conf
@@ -40,6 +40,7 @@ server {
 		root /www/tank/public/assets;
 	}
 	location ~ \.(css|js|txt|png|svg|woff2)$ {
+		access_log off;
 		expires max;
 	}
 	location ~ /\.{
