--- a/misc/nginx/prod.conf
+++ b/misc/nginx/prod.conf
@@ -16,12 +16,13 @@ server {
 
 	rewrite /apple-touch-icon(-.+)-precomposed.png /apple-touch-icon-precomposed.png break;
 
+	error_page 403 404 /index.html;
+
 	location /data {
 		alias /www/tank/output;
 	}
 
 	location / {
-		try_files $uri $uri/ /index.html;
 		index index.html;
 	}
 
