--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -29,9 +30,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.1",
+    "@angular-eslint/builder": "14.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin": "14.0.0-alpha.0",
+    "@angular-eslint/eslint-plugin-template": "14.0.0-alpha.0",
+    "@angular-eslint/schematics": "14.0.0-alpha.0",
+    "@angular-eslint/template-parser": "14.0.0-alpha.0",
     "@angular/cli": "^14.0.1",
     "@angular/compiler-cli": "^14.0.1",
     "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
+    "eslint": "^8.12.0",
     "karma": "~6.3.19",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
