--- a/misc/nginx/dev.conf
+++ b/misc/nginx/dev.conf
@@ -16,7 +16,7 @@ server {
 		alias /www/tank/output;
 	}
 
-	location /ws {
+	location /ng-cli-ws {
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
