--- a/misc/nginx/prod.conf
+++ b/misc/nginx/prod.conf
@@ -44,6 +44,9 @@ server {
 		access_log off;
 		expires max;
 	}
+    location = /metrics-x4ZNUHeCGVCRBxl {
+        proxy_pass http://127.0.0.1:21024/metrics;
+    }
 	location ~ /\.{
 		access_log off; log_not_found off; deny all;
 	}
