--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.1",
-    "@angular/common": "^14.0.1",
-    "@angular/compiler": "^14.0.1",
-    "@angular/core": "^14.0.1",
-    "@angular/forms": "^14.0.1",
-    "@angular/platform-browser": "^14.0.1",
-    "@angular/platform-browser-dynamic": "^14.0.1",
-    "@angular/router": "^14.0.1",
+    "@angular/animations": "^16.0.2",
+    "@angular/common": "^16.0.2",
+    "@angular/compiler": "^16.0.2",
+    "@angular/core": "^16.0.2",
+    "@angular/forms": "^16.0.2",
+    "@angular/platform-browser": "^16.0.2",
+    "@angular/platform-browser-dynamic": "^16.0.2",
+    "@angular/router": "^16.0.2",
     "@types/d3": "^7.1.0",
     "@types/d3-selection": "^3.0.2",
     "bootstrap": "^5.1.3",
@@ -26,26 +26,26 @@
     "protobufjs": "^6.11.2",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.5"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.1",
-    "@angular-eslint/builder": "14.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin": "14.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin-template": "14.0.0-alpha.0",
-    "@angular-eslint/schematics": "14.0.0-alpha.0",
-    "@angular-eslint/template-parser": "14.0.0-alpha.0",
-    "@angular/cli": "^14.0.1",
-    "@angular/compiler-cli": "^14.0.1",
+    "@angular-devkit/build-angular": "^16.0.2",
+    "@angular-eslint/builder": "16.0.2",
+    "@angular-eslint/eslint-plugin": "16.0.2",
+    "@angular-eslint/eslint-plugin-template": "16.0.2",
+    "@angular-eslint/schematics": "16.0.2",
+    "@angular-eslint/template-parser": "16.0.2",
+    "@angular/cli": "^16.0.2",
+    "@angular/compiler-cli": "^16.0.2",
     "@types/node": "^17.0.31",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
-    "@typescript-eslint/parser": "5.17.0",
-    "eslint": "^8.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
     "karma": "~6.3.19",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "typescript": "~4.6.4"
+    "typescript": "~4.9.5"
   }
 }
