--- a/misc/docker/Dockerfile
+++ b/misc/docker/Dockerfile
@@ -5,7 +5,7 @@ FROM golang:latest as builder
 ARG DOCKER_RUNNING=yes
 ARG DEBIAN_FRONTEND=noninteractive
 RUN apt update && apt install -yq protobuf-compiler tzdata ca-certificates
-RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28.1
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.36.8
 
 COPY . /project
 
@@ -24,6 +24,8 @@ COPY --from=builder /project/server/dist/prod/tank-server-next /tank-server
 RUN apk add --no-cache gzip brotli
 
 ENV TZ="Asia/Shanghai"
+
+ENV TANK_MYSQL="tank:tank@tcp(172.17.0.1:3306)/tank"
 
 EXPOSE 80
 
