--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "@types/d3-selection": "^3.0.5",
     "bootstrap": "^5.2.3",
     "d3": "^7.8.4",
+    "none": "^1.0.0",
     "protobufjs": "^7.2.3",
+    "protobufjs-cli": "^1.1.3",
     "rxjs": "~7.8.1",
     "tslib": "^2.5.2",
     "zone.js": "~0.13.0"
